<resources>
    <string name="app_name">MM_Travel</string>

    <string name="search">Search</string>
    <string name="recommend">Recommend</string>
    <string name="in_euro">InEuro</string>
    <string name="featured">Featured</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="start_explore">Explore</string>
    <string name="start_explore_des">new amazing countries</string>

    <string name="login">Log In</string>
    <string name="register">Log Up</string>
    <string name="create_up">Create account</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="re_password">Re-type password</string>

    <string name="validate_username">Username must is email!</string>
    <string name="validate_password">Minimum length is 6!</string>
    <string name="validate_re_password">Not match!</string>

    <string name="page_photo">Photo</string>
    <string name="page_explore">Explore</string>
    <string name="page_activity">Activity</string>
    <string name="page_profile">Profile</string>

    <string name="location_place_to_visit">Places to visit</string>
</resources>