<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_splash"
    tools:context=".src.ui.RegisterFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:textColor="@color/blackOpacity"
        android:layout_marginTop="55dp"
        android:text="@string/start_explore"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_marginTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/blackOpacity"
        android:layout_marginStart="50dp"
        android:text="@string/start_explore_des"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <LinearLayout
        android:orientation="horizontal"
        android:padding="32dp"
        android:layout_width="match_parent"
        android:background="@color/opacityDark"
        android:gravity="center"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_marginBottom="20dp"
            android:orientation="vertical"
            android:padding="16dp"
            android:background="@drawable/border_radius_medium"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content">
            <include layout="@layout/space_height_small"/>
            <TextView
                android:layout_width="wrap_content"
                android:text="@string/register"
                android:textStyle="bold"
                android:textSize="15sp"
                android:layout_height="wrap_content"/>
            <include layout="@layout/space_height_large"/>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                app:hintEnabled="false"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:hint="@string/username"
                    android:inputType="textEmailAddress"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>
            <include layout="@layout/space_height_medium"/>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                app:hintEnabled="false"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>
            <include layout="@layout/space_height_medium"/>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                app:hintEnabled="false"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:hint="@string/re_password"
                    android:inputType="textPassword"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>
            <include layout="@layout/space_height_medium"/>
            <Button
                style="@style/btnGradientRed"
                android:background="@drawable/btn_gradient_red_selector"
                android:text="@string/create_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <include layout="@layout/space_height_small"/>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>