<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_splash"
    tools:context=".src.ui.StartFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="55dp"
        android:textColor="@color/blackOpacity"
        android:text="@string/start_explore"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_marginTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/blackOpacity"
        android:layout_marginStart="50dp"
        android:text="@string/start_explore_des"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <LinearLayout
        android:visibility="gone"
        android:id="@+id/layout_start_action"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="36dp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="16dp">

        <Button
            android:id="@+id/btn_start_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="12dp"
            android:text="@string/login"
            app:layout_constraintBottom_toTopOf="@+id/btn_start_register"
            tools:layout_editor_absoluteX="32dp" />

        <include layout="@layout/space_height_medium"/>

        <Button
            android:id="@+id/btn_start_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="12dp"
            android:text="@string/register"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_editor_absoluteX="32dp" />
        <include layout="@layout/space_height_large"/>
    </LinearLayout>

    <include layout="@layout/loading_normal"/>
</androidx.constraintlayout.widget.ConstraintLayout>