<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context=".src.ui.main.ExploreFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_app_bar"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/padding_normal"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="24dp"
            android:layout_height="24dp" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/page_explore"
                android:textColor="@color/blackOpacity"
                android:textSize="@dimen/font_size_app_title"
                android:textStyle="bold" />
        </LinearLayout>

        <Button
            android:id="@+id/btnExploreFilter"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="@drawable/ic_filter" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include layout="@layout/space_height_small" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_search"
                android:layout_marginHorizontal="@dimen/padding_normal"
                android:layout_marginVertical="6dp"
                android:background="@drawable/shadow_search"
                android:elevation="6dp"
                android:gravity="center"
                android:paddingHorizontal="16dp"
                android:paddingVertical="4dp"
                android:translationZ="10dp"
                android:weightSum="1">

                <ImageView
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:src="@drawable/ic_search" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:autofillHints="true"
                        android:background="@drawable/border_radius_large"
                        android:hint="@string/search"
                        android:inputType="text"
                        android:paddingHorizontal="12dp"
                        android:paddingVertical="6dp" />
                </LinearLayout>
            </LinearLayout>

            <include layout="@layout/space_height_medium" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/padding_small"
                android:text="@string/recommend"
                android:textColor="@color/blackOpacity"
                android:textSize="@dimen/font_size_title"
                android:textStyle="bold" />

            <include layout="@layout/space_height_small" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewExploreRecommend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/padding_small" />

            <include layout="@layout/space_height_medium" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/padding_small"
                android:text="@string/in_euro"
                android:textColor="@color/blackOpacity"
                android:textSize="@dimen/font_size_title"
                android:textStyle="bold" />

            <include layout="@layout/space_height_small" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewExploreInEuro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/padding_small" />

            <include layout="@layout/space_height_medium" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/padding_small"
                android:text="@string/featured"
                android:textColor="@color/blackOpacity"
                android:textSize="@dimen/font_size_title"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>